--- a/JavaScript30/03/index.html
+++ b/JavaScript30/03/index.html
@@ -23,9 +23,9 @@
 
 
   <div class="result">
-    <div class="showText">{spacing:<label id="label_spacing">#ffc600</label>}</div>
+    <div class="showText">{spacing:<label id="label_spacing">10px</label>}</div>
     <div class="showText">{blur:<label id="label_blur">10px</label>}</div>
-    <div class="showText">{base:<label id="label_base">10px</label>}</div>
+    <div class="showText">{base:<label id="label_base">#ffc600</label>}</div>
   </div>
 
 
