--- a/JavaScript30/01/index.html
+++ b/JavaScript30/01/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Day 01</title>
+  <title>Day 01 JavaScript Drum Kit</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
