--- a/JavaScript30/02/index.html
+++ b/JavaScript30/02/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Day 02</title>
+  <title>Day 02 JS and CSS Clock</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
