--- a/JavaScript30/03/index.html
+++ b/JavaScript30/03/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Day 03 CSS Variables</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
